tests/baselines/reference/thisTypeInFunctions.errors.txt
tests/cases/conformance/types/thisType/thisTypeInFunctions.ts(6,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/types/thisType/thisTypeInFunctions.ts (1 errors) ====
    function f(this: { y: number }, x: number): number {
        return x + this.y;
    }
    let obj: {y: number, f: (this: { y: number }, x: number) => number} = { y: 12, f };
    
    obj.f(13); // 25!!!!
    ~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.